--- a/GUI.glade
+++ b/GUI.glade
@@ -263,7 +263,7 @@ audio-volume-medium-symbolic</property>
           </packing>
         </child>
         <child>
-          <object class="GtkButton">
+          <object class="GtkButton" id="forwardButton">
             <property name="label">gtk-media-forward</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
@@ -280,7 +280,7 @@ audio-volume-medium-symbolic</property>
           </packing>
         </child>
         <child>
-          <object class="GtkButton">
+          <object class="GtkButton" id="previousButton">
             <property name="label">gtk-media-previous</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
