--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -55,7 +55,11 @@ button:hover {
 }
 
 /* Style the screenshots */
-    .fit-picture {
+.fit-picture {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    align-self: center;
     max-width: 100%;
     height: auto;
     margin-bottom: 20px;
