--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -12,10 +12,15 @@ h1 {
 
 /* Style the header and navigation links */
 header {
-    background-color: #333;
-    color: white;
-    padding: 10px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    background-color: #fff;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
+  
 nav ul {
     list-style: none;
     margin: 0;
