--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -10,15 +10,18 @@ h1 {
     text-align: center;
 }
 
-/* Style the header and navigation links */
 header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1;
-    background-color: #fff;
+    background-color: black;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  }
+  
+main {
+    margin-top: 100px; /* adjust this value as needed */
 }
   
 nav ul {
