--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -15,14 +15,12 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    height: 5%;
     z-index: 1;
     background-color: black;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-  }
-  
-main {
-    margin-top: 100px; /* adjust this value as needed */
 }
+
   
 nav ul {
     list-style: none;
