--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -21,6 +21,11 @@ header {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center; /* vertical centering */
+}
   
 nav ul {
     list-style: none;
